--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -15,3 +15,12 @@
  <noscript><div><img src="https://mc.yandex.ru/watch/93497051" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
  <!-- /Yandex.Metrika counter -->
  
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2Q1PY6PFPY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2Q1PY6PFPY');
+</script>
