chore: site optimize

--- a/themes/hugo-papermod/layouts/partials/head.html
+++ b/themes/hugo-papermod/layouts/partials/head.html
@@ -146,6 +146,10 @@
     {{- end }}
 </noscript>
 
+<meta property="article:author" content="@arasaka_2077">
+<meta property="telegram:channel" content="@oldi_na_meste">
+<meta property="tg:site_verification" content="g7j8/rPFXfhyrq5q0QQV7EsYWv4=">
+
 {{- /* Misc */}}
 {{- if hugo.IsProduction | or (eq site.Params.env "production") }}
 {{- partial "extend_head.html" . -}}
